git-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gogs-service
  namespace: gogs
  labels:
    app: gogs
spec:
  type: ClusterIP
  ports:
  - name: ssh
    port: 2222
    targetPort: 22
  - name: http
    port: 80
    targetPort: 3000
  selector:
    app: gogs
