git-server/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gogs-ingress
  namespace: gogs
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/whitelist-source-range: ""
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - gogs.silicon-ctf.party
    secretName: tls-secret
  rules:
  - host: gogs.silicon-ctf.party
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gogs-service
            port: 
              number: 80
